[project]
name = "conclave-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dj-config-url>=0.1.1",
    "dj-database-url>=3.1.2",
    "django>=6.0.6",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "djangorestframework-stubs>=3.17.0",
    "dotenv>=0.9.9",
    "drf-spectacular>=0.29.0",
    "pathspec>=1.1.1",
    "psycopg>=3.3.4",
    "python-dotenv>=1.2.2",
]
